add mentors comments

--- a/0_project_1/Movies_IMBD.ipynb
+++ b/0_project_1/Movies_IMBD.ipynb
@@ -70,143 +70,143 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1030</th>\n",
-       "      <td>tt1212450</td>\n",
-       "      <td>26000000</td>\n",
-       "      <td>53676580</td>\n",
-       "      <td>Lawless</td>\n",
-       "      <td>Shia LaBeouf|Tom Hardy|Guy Pearce|Jessica Chas...</td>\n",
-       "      <td>John Hillcoat</td>\n",
-       "      <td>When the law became corrupt, outlaws became he...</td>\n",
-       "      <td>Set in the Depression-era Franklin County, Vir...</td>\n",
-       "      <td>115</td>\n",
-       "      <td>Crime|Drama</td>\n",
-       "      <td>The Weinstein Company|Benaroya Pictures|Yucaip...</td>\n",
-       "      <td>8/29/2012</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1734</th>\n",
-       "      <td>tt0465494</td>\n",
-       "      <td>24000000</td>\n",
-       "      <td>99965753</td>\n",
-       "      <td>Hitman</td>\n",
-       "      <td>Timothy Olyphant|Dougray Scott|Olga Kurylenko|...</td>\n",
-       "      <td>Xavier Gens</td>\n",
-       "      <td>Assassin 47</td>\n",
-       "      <td>The best-selling videogame, Hitman, roars to l...</td>\n",
-       "      <td>89</td>\n",
-       "      <td>Action|Crime|Drama|Thriller</td>\n",
-       "      <td>Twentieth Century Fox Film Corporation|Dune En...</td>\n",
-       "      <td>11/21/2007</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1240</th>\n",
-       "      <td>tt1904996</td>\n",
-       "      <td>35000000</td>\n",
-       "      <td>46216641</td>\n",
-       "      <td>Parker</td>\n",
-       "      <td>Jason Statham|Jennifer Lopez|Nick Nolte|Michae...</td>\n",
-       "      <td>Taylor Hackford</td>\n",
-       "      <td>To get away clean, you have to play dirty.</td>\n",
-       "      <td>A thief with a unique code of professional eth...</td>\n",
-       "      <td>118</td>\n",
-       "      <td>Action|Crime</td>\n",
-       "      <td>SND</td>\n",
-       "      <td>1/23/2013</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>884</th>\n",
-       "      <td>tt0243585</td>\n",
-       "      <td>120000000</td>\n",
-       "      <td>169956806</td>\n",
-       "      <td>Stuart Little 2</td>\n",
-       "      <td>Michael J. Fox|Geena Davis|Hugh Laurie|Jonatha...</td>\n",
-       "      <td>Rob Minkoff</td>\n",
-       "      <td>A Little Goes A Long Way</td>\n",
-       "      <td>Stuart, an adorable white mouse, still lives h...</td>\n",
-       "      <td>78</td>\n",
-       "      <td>Family|Adventure|Animation|Comedy</td>\n",
-       "      <td>Columbia Pictures|Sony Pictures Entertainment</td>\n",
-       "      <td>7/19/2002</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>680</th>\n",
-       "      <td>tt0443701</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>68369434</td>\n",
-       "      <td>The X Files: I Want to Believe</td>\n",
-       "      <td>David Duchovny|Gillian Anderson|Amanda Peet|Bi...</td>\n",
-       "      <td>Chris Carter</td>\n",
-       "      <td>To find the truth, you must believe.</td>\n",
-       "      <td>Six years after the events of The X-Files seri...</td>\n",
+       "      <th>1173</th>\n",
+       "      <td>tt0335563</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>2466444</td>\n",
+       "      <td>Wonderland</td>\n",
+       "      <td>Val Kilmer|Dylan McDermott|Kate Bosworth|Josh ...</td>\n",
+       "      <td>James Cox</td>\n",
+       "      <td>Sex, drugs, murder. Welcome to L.A.</td>\n",
+       "      <td>On the afternoon of July 1, 1981, Los Angeles ...</td>\n",
        "      <td>104</td>\n",
-       "      <td>Drama|Mystery|Science Fiction|Thriller</td>\n",
-       "      <td>Twentieth Century Fox Film Corporation|Ten Thi...</td>\n",
-       "      <td>7/24/2008</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2008</td>\n",
+       "      <td>Crime|Drama|Mystery|Thriller</td>\n",
+       "      <td>Lions Gate Films</td>\n",
+       "      <td>10/23/2003</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>tt1533749</td>\n",
+       "      <td>29000000</td>\n",
+       "      <td>33662874</td>\n",
+       "      <td>Xin shao lin si</td>\n",
+       "      <td>Andy Lau|Nicholas Tse|Fan Bingbing|Jackie Chan...</td>\n",
+       "      <td>Benny Chan</td>\n",
+       "      <td>In a land torn by strife, the righteous monks ...</td>\n",
+       "      <td>China is plunged into strife as feuding warlor...</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Action|Drama</td>\n",
+       "      <td>Emperor Motion Pictures|China Film Group Corpo...</td>\n",
+       "      <td>1/20/2011</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>812</th>\n",
+       "      <td>tt0477302</td>\n",
+       "      <td>40000000</td>\n",
+       "      <td>55247881</td>\n",
+       "      <td>Extremely Loud &amp; Incredibly Close</td>\n",
+       "      <td>Thomas Horn|Tom Hanks|Sandra Bullock|Max von S...</td>\n",
+       "      <td>Stephen Daldry</td>\n",
+       "      <td>This is not a story about September 11th, it's...</td>\n",
+       "      <td>A year after his father's death, Oskar, a trou...</td>\n",
+       "      <td>129</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Paramount Pictures|Scott Rudin Productions|War...</td>\n",
+       "      <td>12/24/2011</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>tt1216491</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>2450846</td>\n",
+       "      <td>Kill the Messenger</td>\n",
+       "      <td>Jeremy Renner|Mary Elizabeth Winstead|Michael ...</td>\n",
+       "      <td>Michael Cuesta</td>\n",
+       "      <td>Can you keep a National Secret?</td>\n",
+       "      <td>A reporter becomes the target of a vicious sme...</td>\n",
+       "      <td>112</td>\n",
+       "      <td>Thriller|Crime|Drama|Mystery</td>\n",
+       "      <td>The Combine|Bluegrass Films</td>\n",
+       "      <td>10/9/2014</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>911</th>\n",
+       "      <td>tt0322802</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>64282312</td>\n",
+       "      <td>Jackass: The Movie</td>\n",
+       "      <td>Johnny Knoxville|Bam Margera|Steve-O|Chris Pon...</td>\n",
+       "      <td>Jeff Tremaine</td>\n",
+       "      <td>Do not attempt this at home.</td>\n",
+       "      <td>Johnny Knoxville and his crazy friends appear ...</td>\n",
+       "      <td>87</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Paramount Pictures</td>\n",
+       "      <td>10/21/2002</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        imdb_id     budget    revenue                  original_title  \\\n",
-       "1030  tt1212450   26000000   53676580                         Lawless   \n",
-       "1734  tt0465494   24000000   99965753                          Hitman   \n",
-       "1240  tt1904996   35000000   46216641                          Parker   \n",
-       "884   tt0243585  120000000  169956806                 Stuart Little 2   \n",
-       "680   tt0443701   30000000   68369434  The X Files: I Want to Believe   \n",
+       "        imdb_id    budget   revenue                     original_title  \\\n",
+       "1173  tt0335563   5000000   2466444                         Wonderland   \n",
+       "850   tt1533749  29000000  33662874                    Xin shao lin si   \n",
+       "812   tt0477302  40000000  55247881  Extremely Loud & Incredibly Close   \n",
+       "228   tt1216491   5000000   2450846                 Kill the Messenger   \n",
+       "911   tt0322802   5000000  64282312                 Jackass: The Movie   \n",
        "\n",
-       "                                                   cast         director  \\\n",
-       "1030  Shia LaBeouf|Tom Hardy|Guy Pearce|Jessica Chas...    John Hillcoat   \n",
-       "1734  Timothy Olyphant|Dougray Scott|Olga Kurylenko|...      Xavier Gens   \n",
-       "1240  Jason Statham|Jennifer Lopez|Nick Nolte|Michae...  Taylor Hackford   \n",
-       "884   Michael J. Fox|Geena Davis|Hugh Laurie|Jonatha...      Rob Minkoff   \n",
-       "680   David Duchovny|Gillian Anderson|Amanda Peet|Bi...     Chris Carter   \n",
+       "                                                   cast        director  \\\n",
+       "1173  Val Kilmer|Dylan McDermott|Kate Bosworth|Josh ...       James Cox   \n",
+       "850   Andy Lau|Nicholas Tse|Fan Bingbing|Jackie Chan...      Benny Chan   \n",
+       "812   Thomas Horn|Tom Hanks|Sandra Bullock|Max von S...  Stephen Daldry   \n",
+       "228   Jeremy Renner|Mary Elizabeth Winstead|Michael ...  Michael Cuesta   \n",
+       "911   Johnny Knoxville|Bam Margera|Steve-O|Chris Pon...   Jeff Tremaine   \n",
        "\n",
        "                                                tagline  \\\n",
-       "1030  When the law became corrupt, outlaws became he...   \n",
-       "1734                                        Assassin 47   \n",
-       "1240         To get away clean, you have to play dirty.   \n",
-       "884                            A Little Goes A Long Way   \n",
-       "680                To find the truth, you must believe.   \n",
+       "1173                Sex, drugs, murder. Welcome to L.A.   \n",
+       "850   In a land torn by strife, the righteous monks ...   \n",
+       "812   This is not a story about September 11th, it's...   \n",
+       "228                     Can you keep a National Secret?   \n",
+       "911                        Do not attempt this at home.   \n",
        "\n",
        "                                               overview  runtime  \\\n",
-       "1030  Set in the Depression-era Franklin County, Vir...      115   \n",
-       "1734  The best-selling videogame, Hitman, roars to l...       89   \n",
-       "1240  A thief with a unique code of professional eth...      118   \n",
-       "884   Stuart, an adorable white mouse, still lives h...       78   \n",
-       "680   Six years after the events of The X-Files seri...      104   \n",
+       "1173  On the afternoon of July 1, 1981, Los Angeles ...      104   \n",
+       "850   China is plunged into strife as feuding warlor...      131   \n",
+       "812   A year after his father's death, Oskar, a trou...      129   \n",
+       "228   A reporter becomes the target of a vicious sme...      112   \n",
+       "911   Johnny Knoxville and his crazy friends appear ...       87   \n",
        "\n",
-       "                                      genres  \\\n",
-       "1030                             Crime|Drama   \n",
-       "1734             Action|Crime|Drama|Thriller   \n",
-       "1240                            Action|Crime   \n",
-       "884        Family|Adventure|Animation|Comedy   \n",
-       "680   Drama|Mystery|Science Fiction|Thriller   \n",
+       "                            genres  \\\n",
+       "1173  Crime|Drama|Mystery|Thriller   \n",
+       "850                   Action|Drama   \n",
+       "812                          Drama   \n",
+       "228   Thriller|Crime|Drama|Mystery   \n",
+       "911                         Comedy   \n",
        "\n",
        "                                   production_companies release_date  \\\n",
-       "1030  The Weinstein Company|Benaroya Pictures|Yucaip...    8/29/2012   \n",
-       "1734  Twentieth Century Fox Film Corporation|Dune En...   11/21/2007   \n",
-       "1240                                                SND    1/23/2013   \n",
-       "884       Columbia Pictures|Sony Pictures Entertainment    7/19/2002   \n",
-       "680   Twentieth Century Fox Film Corporation|Ten Thi...    7/24/2008   \n",
+       "1173                                   Lions Gate Films   10/23/2003   \n",
+       "850   Emperor Motion Pictures|China Film Group Corpo...    1/20/2011   \n",
+       "812   Paramount Pictures|Scott Rudin Productions|War...   12/24/2011   \n",
+       "228                         The Combine|Bluegrass Films    10/9/2014   \n",
+       "911                                  Paramount Pictures   10/21/2002   \n",
        "\n",
        "      vote_average  release_year  \n",
-       "1030           6.7          2012  \n",
-       "1734           5.9          2007  \n",
-       "1240           5.6          2013  \n",
-       "884            5.4          2002  \n",
-       "680            5.4          2008  "
+       "1173           6.4          2003  \n",
+       "850            6.4          2011  \n",
+       "812            7.0          2011  \n",
+       "228            6.5          2014  \n",
+       "911            6.2          2002  "
       ]
      },
      "execution_count": 2,
@@ -805,6 +805,14 @@
    "outputs": [],
    "source": [
     "# лень, много времени уходит на прокрастинацию )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Замечания и дополнения от менторов:\n",
+    "В 11 вопросе для решения также подойдёт функция Counter()."
    ]
   },
   {
@@ -1458,7 +1466,8 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "8qmJVq4CVqAQ"
+    "id": "8qmJVq4CVqAQ",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1696,6 +1705,48 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Замечания и дополнения от менторов:\n",
+    "В 26-м задании для решения также подойдет метод quantile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9                                          Inside Out\n",
+       "34                                               Room\n",
+       "118                                      Interstellar\n",
+       "119                           Guardians of the Galaxy\n",
+       "125                                The Imitation Game\n",
+       "128                                         Gone Girl\n",
+       "138                          The Grand Budapest Hotel\n",
+       "370                                         Inception\n",
+       "599                                   The Dark Knight\n",
+       "872                                       The Pianist\n",
+       "1081    The Lord of the Rings: The Return of the King\n",
+       "1183                          The Wolf of Wall Street\n",
+       "1191                                 12 Years a Slave\n",
+       "1800                                          Memento\n",
+       "Name: original_title, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['vote_average']>data.quantile(0.99, numeric_only=True)['vote_average']]['original_title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "MdXsUXbCVqAV"
@@ -1706,14 +1757,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Получили результат: {'Emma Watson & Rupert Grint', 'Daniel Radcliffe & Rupert Grint', 'Daniel Radcliffe & Emma Watson'}\n",
+      "Получили результат: {'Emma Watson & Rupert Grint', 'Daniel Radcliffe & Emma Watson', 'Daniel Radcliffe & Rupert Grint'}\n",
       "Отобрали из списка предложенных: Daniel Radcliffe & Rupert Grint\n"
      ]
     }
@@ -1760,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1800,7 +1851,7 @@
        " '27': 'Daniel Radcliffe & Rupert Grint'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1825,7 +1876,7 @@
        "27"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
